added somethings